--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,15 @@ body {
 .link:hover {
   color: black;
 }
+.dropdown {
+  position: relative;
+}
+.dropdown-menu {
+  position: absolute;
+  left: 0;
+  top: calc(100% + 0.25rem);
+  background-color: white;
+  padding: 0.75rem;
+  border-radius: 0.025;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, -1);
+}
