--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,6 @@ body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, -1);
   opacity: 0;
 }
+.dropdown-menu > .link:focus .dropdown-menu {
+  opacity: 1;
+}
