--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,10 @@ body {
   top: calc(100% + 0.25rem);
   background-color: white;
   padding: 0.75rem;
-  border-radius: 0.025;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, -1);
+  border-radius: 0.25;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, -1);
   opacity: 0;
 }
-.dropdown-menu > .link:focus .dropdown-menu {
+.dropdown > .link:focus + .dropdown-menu {
   opacity: 1;
 }
