--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 .link:hover {
   color: black;
 }
-.dropdown > .link:focus,
+.dropdown.active > .link,
 .dropdown {
   position: relative;
 }
@@ -38,6 +38,6 @@ body {
   transform: translate(-10px);
   transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
 }
-.dropdown > .link:focus + .dropdown-menu {
+.dropdown.active > .link + .dropdown-menu {
   opacity: 1;
 }
